--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -20,8 +20,10 @@ jobs:
           java-version: 1.8
       - name: Build with Maven
         run: mvn -B package --file pom.xml
+        working-directory: zad1
       - name: Test
         run: mvn -B test
+        working-directory:
       - name: Codecov
         uses: codecov/codecov-action@v1.0.6
         with:
