--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,22 @@
             <version>4.2</version>
             <scope>test</scope>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.mongodb/mongo-java-driver -->
+        <dependency>
+            <groupId>org.mongodb</groupId>
+            <artifactId>mongo-java-driver</artifactId>
+            <version>3.12.2</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.jongo/jongo -->
+        <dependency>
+            <groupId>org.jongo</groupId>
+            <artifactId>jongo</artifactId>
+            <version>1.3.0</version>
+        </dependency>
+
+
     </dependencies>
     <build>
         <plugins>
